--- a/site.html
+++ b/site.html
@@ -23,6 +23,11 @@
             <th>R$6.000,00</th>
             <th>2001</th>
         </tr>
+        <tr>
+            <th>Opala</th>
+            <th>R$5.000,00</th>
+            <th>1968</th>
+        </tr>
     </td>
  </table>
 </body>
